--- a/index.html
+++ b/index.html
@@ -1,1 +1,164 @@
-<h1>Me</h1>
+<!DOCTYPE html>
+<html lang="zh-cn">
+
+<head>
+    <title>Web Components</title>
+    <link rel="icon" href="./assets/favorite.svg" />
+    <!-- 
+        #05668D
+        #028090
+        #00A896
+        #02C39A
+        #F0F3BD
+     -->
+    <style>
+        :root {
+            --dblp-display: none
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            min-width: 976px;
+            height: 100vh;
+            box-sizing: border-box;
+            background-color: #E9FBD6;
+            color: #333744;
+            padding: 1rem;
+            font-size: 16px;
+        }
+
+        body>.box {
+            margin: 0 auto;
+            box-sizing: border-box;
+            display: grid;
+            column-gap: 1rem;
+            row-gap: 1rem;
+            grid-template-columns: repeat(12, 1fr);
+            grid-auto-rows: 64px;
+        }
+
+        body>.box>div {
+            background-color: #A7E981;
+            border-radius: 0.5rem;
+            grid-column: span 2;
+            grid-row: span 1;
+        }
+
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #333744;
+                color: #F0F2F6;
+            }
+        }
+
+        /* 768=64*12 1024=64*16 1280=64*20 1536=64*24 1792=64*28 */
+        @media screen and (min-width: 976px) {
+            body>.box {
+                width: 976px;
+                grid-template-columns: repeat(12, 64px);
+            }
+        }
+
+        @media screen and (min-width: 1296px) {
+            body>.box {
+                width: 1296px;
+                grid-template-columns: repeat(16, 64px);
+            }
+        }
+
+        @media screen and (min-width: 1616px) {
+            body>.box {
+                width: 1616px;
+                grid-template-columns: repeat(20, 64px);
+            }
+        }
+
+        .box-search {
+            display: grid;
+            grid-template-columns: 1fr 64px;
+        }
+
+        .box-search>[name="search-outline"] {
+            width: 80%;
+            height: 80%;
+            justify-self: center;
+            align-self: center;
+            cursor: pointer;
+        }
+
+        .box-search>[name="search-outline"]:hover {
+            color: #6690FF;
+        }
+
+        .search_input {
+            outline: none;
+            border: 0;
+            padding-left: 1rem;
+            border-radius: 0.25rem;
+            font-size: 1.5rem;
+        }
+    </style>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</head>
+
+<body>
+    <div class="box">
+        <div style="grid-column: span 2;grid-row: span 3;"></div>
+        <div style="grid-column: span 2;"></div>
+        <div style="grid-column: span 2;"></div>
+        <div style="grid-column: span 2;grid-row: span 2;">
+            <ion-icon style="width: 80%;height: 80%;transform: translate(12.5%,12.5%);" name="bag-handle-outline">
+            </ion-icon>
+        </div>
+        <div class="dblp" style="grid-column: span 2;background-image: url(./assets/dblp.png);background-size: cover;">
+            <!-- <div style="backdrop-filter: blur(1px);border-radius: 0.5rem;height: 100%;font-size: 0.5rem;color: #F0FDD3;">DBLP</div> -->
+        </div>
+        <div style="grid-column: span 1;cursor: pointer;" onclick="()=>{}">
+            <svg t="1649335557712" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                p-id="2380">
+                <path
+                    d="M128 42.666667C80.64 42.666667 42.666667 80.64 42.666667 128L42.666667 725.333333C42.666667 772.693333 80.64 810.666667 128 810.666667L640 810.666667 384 42.666667 128 42.666667M526.506667 213.333333 554.666667 298.666667 896 298.666667 896 896 528.213333 896 555.946667 981.333333 896 981.333333C943.36 981.333333 981.333333 943.36 981.333333 896L981.333333 298.666667C981.333333 251.306667 943.36 213.333333 896 213.333333L526.506667 213.333333M301.226667 252.16C348.16 252.16 387.84 269.226667 417.28 298.666667L369.493333 342.613333C357.12 330.24 335.786667 316.16 301.226667 316.16 241.92 316.16 194.56 364.8 194.56 424.106667 194.56 483.413333 241.92 533.333333 301.226667 533.333333 370.346667 533.333333 395.093333 483.413333 400.213333 458.666667L301.226667 458.666667 301.226667 400.213333 464.213333 400.213333C466.346667 410.026667 466.773333 416.853333 466.773333 429.226667 466.773333 528.213333 400.213333 597.333333 301.226667 597.333333 205.226667 597.333333 128 520.106667 128 424.106667 128 327.68 205.226667 252.16 301.226667 252.16M682.666667 426.666667 682.666667 469.333333 611.84 469.333333 625.493333 512 768 512C756.48 538.026667 752.213333 561.92 717.226667 602.88 700.16 582.826667 686.506667 565.333333 682.666667 554.666667L640 554.666667C645.12 573.013333 666.453333 601.6 692.053333 630.613333 686.506667 636.16 678.826667 643.413333 672 649.386667L683.946667 685.226667C694.613333 675.84 705.28 666.026667 715.946667 656.213333 759.466667 701.866667 805.546667 744.106667 805.546667 744.106667L829.44 718.506667C829.44 718.506667 783.786667 673.706667 742.826667 629.333333 769.706667 599.466667 793.6 563.2 810.666667 512L853.333333 512 853.333333 469.333333 725.333333 469.333333 725.333333 426.666667 682.666667 426.666667Z"
+                    p-id="2381" data-spm-anchor-id="a313x.7781069.0.i6" class="selected" fill="#FF4B23"></path>
+            </svg>
+        </div>
+        <div style="grid-column: span 2;"></div>
+        <div style="grid-column: span 2;"></div>
+        <div style="grid-column: span 2;"></div>
+        <div style="grid-column: span 2;"></div>
+        <div style="grid-column: span 2;"></div>
+        <div style="grid-column: span 2;"></div>
+        <div style="grid-column: span 2;"></div>
+        <div class="box-search" style="grid-column: span 8;">
+            <input id="search_input" type="text" class="search_input" />
+            <ion-icon onclick="search()" name="search-outline"></ion-icon>
+        </div>
+    </div>
+    <script>
+        const searchInput = document.getElementById("search_input")
+        searchInput.addEventListener("keyup", (event) => {
+            event.preventDefault()
+            if (event.keyCode === 13) search()
+        })
+
+        function search() {
+            const a = document.createElement("a")
+            a.href = `https://cn.bing.com/search?q=${searchInput.value}`
+            a.target = "_blank"
+            a.click()
+        }
+        function giteeIssus() {
+            fetch(`https://gitee.com/api/v5/repos/huaydance/hyua/issues/I51LO9/comments?access_token=1107e3357174f92958ae9e8c042face4&page=1&per_page=20&order=asc`)
+            .then(res=>res.json()).then(res=>{
+                console.log(res)
+            })
+        }
+        giteeIssus()
+    </script>
+</body>
+
+</html>
